Try fix on vm