@@ -85,14 +85,10 @@ public class RegisterServerService {
       UserModel newUser = repository.findByUsername(request.getUsername());
       try {
         GroupModel nonGroup = groupRepository.findByShortName("Non Group");
-        if (groupMemberRepository.findById(nonGroup.getId()).isPresent()) {
-          GroupMemberModel groupMember = groupMemberRepository.findById(nonGroup.getId()).get();
-          groupMember.addUserIds(Collections.singletonList(newUser.getId()));
-          groupMemberRepository.save(groupMember);
-        } else {
-          GroupMemberModel newGroup = new GroupMemberModel(nonGroup.getId(), List.of(newUser.getId()));
-          groupMemberRepository.save(newGroup);
-        }
+        GroupMemberModel groupMember = groupMemberRepository.findById(nonGroup.getId()).get();
+        groupMember.addUserIds(Collections.singletonList(newUser.getId()));
+        groupMemberRepository.save(groupMember);
+
       } catch (NullPointerException e) {
         e.getMessage();
       }
